--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "Wazamba",
   "main": "Wazamba",
   "theme": "syntax",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "คาสิโนออนไลน์ Wazamba และ สปอร์ตบุค ขอมอบความเป็นไปได้ที่ไม่มีที่สิ้นสุด Wazamba เสนอเกมคาสิโน คาสิโนสด การเดิมพันกีฬา และกีฬาเสมือนจริง เจ้ามือรับแทง Wazamba เป็นหนึ่งในผู้ให้บริการเดิมพันออนไลน์ชั้นนำของโลกอย่างไม่ต้องสงสัย Wazamba พร้อมที่จะรองรับระบบการชำระเงินมากถึง 30 ระบบ รวมถึงสกุลเงินดิจิตอล!",
   "keywords": [
-    "Wazamba","wazamba888","รีวิวคาสิโน Wazamba ในประเทศไทย","Wazamba thailand","Wazamba Casino","Wazamba สล็อต","เว็บสล็อตที่ดีที่สุดในโลก","10 อันดับแรกเว็บคาสิโน 2022"
+    "Wazamba",
+    "wazamba888",
+    "รีวิวคาสิโน Wazamba ในประเทศไทย",
+    "Wazamba thailand",
+    "Wazamba Casino",
+    "Wazamba สล็อต",
+    "เว็บสล็อตที่ดีที่สุดในโลก",
+    "10 อันดับแรกเว็บคาสิโน 2022"
   ],
   "repository": "https://github.com/wtharworn11/Wazamba",
   "license": "MIT",
